# web3mc

./: .gitignore  .pre-commit-config.yaml  README.MD  README.md  pyproject.toml
.github/workflows/: publish.yaml
examples/: get_positions.py  simple.py
tests/: conftest.py  test_aggregate.py
web3mc/: __init__.py  abi.py  auto.py  call.py  constants.py  multicall.py
