[tool.poetry]
name = "web3mc"
version = "0.1.10"
description = "Multicall library for aggregating web3py contract calls"
authors = ["amfet42"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/amfet42/web3mc"
keywords = ["web3", "multicall"]

[tool.poetry.dependencies]
python = "^3.10"
web3 = ">=6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''
(
  /(
    \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
)
'''
line-length = 120
target_version = ['py310']

[tool.isort]
profile = "black"
py_version = 310
line_length = 120
known_first_party = "poetry"
